# desktop_video_macos

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.mm
MyDesktopVideo.app/Contents/: Info.plist
MyDesktopVideo.app/Contents/MacOS/: MyDesktopVideo
assets/: MyDesktopVideo.icns
src/: main.mm
